# aw-watcher-input

./: Makefile  README.md  aw-watcher-input.spec  pyproject.toml
.github/workflows/: build.yml  codeql.yml
src/aw_watcher_input/: __main__.py  config.py  main.py
visualization/: Makefile  package-lock.json  package.json
visualization/src/: index.js  index.pug
