[tool.poetry]
name = "aw-watcher-input"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "aw_watcher_input", from = "src" }
]

[tool.poetry.scripts]
aw-watcher-input = "aw_watcher_input.main:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}
aw-watcher-afk = {git = "https://github.com/ActivityWatch/aw-watcher-afk.git"}

[tool.poetry.dev-dependencies]
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
