[tool.poetry]
name = "aw-watcher-input"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "aw_watcher_input", from = "src" }
]

[tool.poetry.scripts]
aw-watcher-input = "aw_watcher_input.main:main"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
aw-client = "^0.5.13"
aw-watcher-afk = {git = "https://github.com/ActivityWatch/aw-watcher-afk.git"}

[tool.poetry.dev-dependencies]
pyinstaller = "^5.7"
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
